--- a/chap2_0.ipynb
+++ b/chap2_0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "chap2_0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPDtHdZtBjm+iuNvT6CHrIE",
+      "authorship_tag": "ABX9TyOTAJTQRxvTX/z1XfFTQmvA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "c0ba7ba2-3408-4fcd-dcb1-01f3c1743f87"
+        "outputId": "8ae5e0e8-2e63-4293-820f-d9060adbfec5"
       },
       "source": [
         "from keras.datasets import mnist"
@@ -54,26 +54,13 @@
       "metadata": {
         "id": "rX3cYVEnd0gv",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "outputId": "feb701c8-a902-4554-f218-927888e1f9ca"
+        "colab": {}
       },
       "source": [
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -84,12 +71,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "7bdb803b-49af-4e42-d5d1-ba95d40ae112"
+        "outputId": "068e5eca-ca4c-4a63-da78-54f976591978"
       },
       "source": [
         "train_images.shape"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +88,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
@@ -114,12 +101,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "ce46c6e5-5bfe-4354-c700-6c68a68d46ac"
+        "outputId": "3f518c59-5f28-4e08-ae3b-46c9ace54204"
       },
       "source": [
         "train_labels.shape"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +118,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 4
         }
       ]
     },
@@ -144,12 +131,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "d4d4d9c5-ba25-46b8-9955-9282e5965a0b"
+        "outputId": "ed761944-28e3-4be2-84d3-ca76dded7432"
       },
       "source": [
         "train_labels"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +148,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -174,12 +161,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "fcbbfe26-f1be-4d64-ebd9-dbc0c1a00e07"
+        "outputId": "d7ee99b7-884b-4bbc-eb5a-89683cad38bf"
       },
       "source": [
         "test_images.shape"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +178,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -204,12 +191,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "2f2c2f64-f9a1-4719-cbe0-92ad92a7cf81"
+        "outputId": "8c0ec6c3-ca9c-43ab-edc7-7c69c7d3ec1d"
       },
       "source": [
         "test_labels.shape"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +208,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
@@ -234,12 +221,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "32efcfe7-e095-4ade-af37-a6656e574688"
+        "outputId": "4c356a2b-9b14-4fcc-de4a-756a08e4506f"
       },
       "source": [
         "test_labels"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +238,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
@@ -259,6 +246,176 @@
       "cell_type": "code",
       "metadata": {
         "id": "C1krlZaZfnBz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import models\n",
+        "from keras import layers"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lsU8rfLSpxIa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "network = models.Sequential()\n",
+        "network.add(layers.Dense(512, activation='relu', input_shape=(28*28, )))\n",
+        "network.add(layers.Dense(10, activation='softmax'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bWK4tpRkqJBU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "network.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1NoDpzIcq0uT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_images = train_images.reshape((60000,28*28))\n",
+        "train_images = train_images.astype('float32')/255\n",
+        "test_images = test_images.reshape((10000,28*28))\n",
+        "test_images = test_images.astype('float32')/255"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5l1wmTQprYWU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras.utils import to_categorical"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BbG7R0cwroi8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_labels = to_categorical(train_labels)\n",
+        "test_labels = to_categorical(test_labels)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nU4xk2cHrxPU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 217
+        },
+        "outputId": "ed5ca468-b327-4510-f8aa-65193f025d0e"
+      },
+      "source": [
+        "# Training the model\n",
+        "network.fit(train_images, train_labels, epochs=5, batch_size=128)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "60000/60000 [==============================] - 4s 72us/step - loss: 0.2534 - accuracy: 0.9265\n",
+            "Epoch 2/5\n",
+            "60000/60000 [==============================] - 4s 67us/step - loss: 0.1031 - accuracy: 0.9690\n",
+            "Epoch 3/5\n",
+            "60000/60000 [==============================] - 4s 68us/step - loss: 0.0674 - accuracy: 0.9802\n",
+            "Epoch 4/5\n",
+            "60000/60000 [==============================] - 4s 70us/step - loss: 0.0492 - accuracy: 0.9849\n",
+            "Epoch 5/5\n",
+            "60000/60000 [==============================] - 4s 70us/step - loss: 0.0373 - accuracy: 0.9887\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.callbacks.History at 0x7fdf471d86a0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fPtVeaabr906",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "f73ee349-1b66-453f-dabc-61711e244d7c"
+      },
+      "source": [
+        "test_loss, test_acc = network.evaluate(test_images, test_labels)\n",
+        "test_acc, test_loss"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10000/10000 [==============================] - 1s 51us/step\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.9799000024795532, 0.06800703518928494)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gZ_BG5TOsTRt",
         "colab_type": "code",
         "colab": {}
       },
