--- a/3_6_classifying_newswires.ipynb
+++ b/3_6_classifying_newswires.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "3.6-classifying-newswires.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7cRq64kjXNT4r1qwQenS5",
+      "authorship_tag": "ABX9TyPv3Umqck6yziz00L/UWOr5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "5be6bbc1-5957-47d9-9fa5-eb79d29d2d49"
+        "outputId": "06ad5b86-8349-446d-f2f0-975b384b5e87"
       },
       "source": [
         "import keras"
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "9b49fd1a-22f1-447b-e6ca-e6a513b23159"
+        "outputId": "d86dec29-c362-4555-e740-edd43b56ee11"
       },
       "source": [
         "from keras.datasets import reuters\n",
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "c0b3d275-a96c-4f5e-9bc4-215ed7c14864"
+        "outputId": "db8c38cb-8724-4e9e-f987-1fe319f3aa09"
       },
       "source": [
         "len(train_data)"
@@ -159,7 +159,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "7039cc6f-28fe-4dda-e82c-815688822570"
+        "outputId": "037c0b42-3de0-49cb-9bae-f323df30d4aa"
       },
       "source": [
         "len(test_data)"
@@ -189,7 +189,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "7cbd3df9-965a-4d15-88ad-6b5cd73f86b8"
+        "outputId": "aa13974a-3a29-488c-aadc-9008275eedd6"
       },
       "source": [
         "train_data.shape"
@@ -219,13 +219,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 182
         },
-        "outputId": "8a1429a1-66d9-4d2c-e0aa-c7937b759fe1"
+        "outputId": "6379f008-af79-439f-a236-705e1f952988"
       },
       "source": [
         "# As with the IMDB reviews, each example is a list of integers (word indices):\n",
         "train_data"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -244,7 +244,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -253,7 +253,11 @@
       "metadata": {
         "id": "mos0fgLzgP7G",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "59fb486d-52e6-434f-d9f2-b0edd1718bf1"
       },
       "source": [
         "# Here's how you can decode it back to words, in case you are curious:\n",
@@ -263,8 +267,17 @@
         "# Note that our indices were offset by 3\n",
         "# because 0, 1 and 2 are reserved indices for \"padding\", \"start of sequence\", and \"unknown\"."
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/text-datasets/reuters_word_index.json\n",
+            "557056/550378 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -288,25 +301,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 55
         },
-        "outputId": "2f8e7f9f-8398-4747-c0fc-706512d034dd"
+        "outputId": "a3a53c0a-dab6-4d3e-98af-f67b7a401613"
       },
       "source": [
         "decoded_newswire = ' '.join([reverse_word_index.get(i - 3, '?') for i in train_data[randrange(0,500)]])\n",
         "decoded_newswire"
       ],
-      "execution_count": 27,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"? japan's seasonally adjusted unemployment rate rose to a record 3 2 pct in may the worst level since the government started compiling unemployment statistics in 1953 the government's management and ? agency said the may rate surpassed the previous record of 3 0 pct marked set in january and april this year it was also up sharply from 2 7 pct a year earlier unadjusted may unemployment totalled 1 91 mln people up from 1 90 mln in april and 1 62 mln a year earlier an agency official blamed industrial restructuring and the strong yen for the rise in unemployment the seasonally adjusted male unemployment rate in may rose to a record 3 2 pct ? the previous record 3 0 pct set in july 1986 this compares with 2 9 pct in april and 2 7 pct a year ? unadjusted male unemployment totalled 1 12 mln up 180 000 from a year earlier the female unemployment rate in may was unchanged from april at a record 3 1 pct a year ago the rate was 2 8 pct unadjusted female unemployment rose 100 000 to 790 000 the yen's appreciation continued to affect employment in manufacturing industries and the total employed in may fell 210 000 or 1 5 pct from a year earlier to 14 10 mln reuter 3\""
+              "\"? shr profit seven cts vs n a net profit 587 000 vs profit 3 231 000 sales 18 5 mln vs 18 7 mln nine mths shr loss 39 ct s vs n a net loss 2 368 000 vs ? 7 165 000 sales 55 4 mln vs 54 2 mln note current nine month figures include extraordinary loss of 1 2 mln dlrs or 17 cts per share resulting from costs associated with restructuring prior quarter and nine month per share figures not applicable because company began operations in october 1986 with the acquisition of gould inc's lt ? medical products group reuter 3\""
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 9
         }
       ]
     },
@@ -325,6 +338,166 @@
       "cell_type": "code",
       "metadata": {
         "id": "YvDQZ6P9gOoR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ghC59vDCTY2k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def vectorize_sequences(sequences, dimension=10000):\n",
+        "    results = np.zeros((len(sequences), dimension))\n",
+        "    for i, sequence in enumerate(sequences):\n",
+        "        results[i, sequence] = 1.\n",
+        "    return results"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5XQs7sm5TeEm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Our vectorized training data\n",
+        "x_train = vectorize_sequences(train_data)\n",
+        "# Our vectorized test data\n",
+        "x_test = vectorize_sequences(test_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Do2t5srtT72q",
+        "colab_type": "text"
+      },
+      "source": [
+        "To vectorize the labels, there are two possibilities: we could just cast the label list as an integer tensor, or we could use a \"one-hot\" encoding. One-hot encoding is a widely used format for categorical data, also called \"categorical encoding\". For a more detailed explanation of one-hot encoding, you can refer to Chapter 6, Section 1. In our case, one-hot encoding of our labels consists in embedding each label as an all-zero vector with a 1 in the place of the label index, e.g.:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ikt1uwQoT2_q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def to_one_hot(labels, dimension=46):\n",
+        "    results = np.zeros((len(labels), dimension))\n",
+        "    for i, label in enumerate(labels):\n",
+        "        results[i, label] = 1.\n",
+        "    return results"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7su4YYP5UJ1i",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3b28757d-0d84-451b-ea82-48a7826a9892"
+      },
+      "source": [
+        "only_2test_label = np.array([3,3,1,2,3,1,1,0,0,4])\n",
+        "only_2test_label"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 3, 1, 2, 3, 1, 1, 0, 0, 4])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lWMrwIbGU5cq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 199
+        },
+        "outputId": "b4cd09f6-787d-48c1-80bd-2b3a0f3988d9"
+      },
+      "source": [
+        "only_2test_one_hot_label = to_one_hot(only_2test_label, 5)  # The number 5 here sets the dimension to 5 (from 0 to 4). Default is 46\n",
+        "only_2test_one_hot_label"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 1., 0.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 0., 1., 0.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [1., 0., 0., 0., 0.],\n",
+              "       [1., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n6MvaUH3UN3x",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Our vectorized training labels\n",
+        "one_hot_train_labels = to_one_hot(train_labels)\n",
+        "# Our vectorized test labels\n",
+        "one_hot_test_labels = to_one_hot(test_labels)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Iq1cm5DOVuxx",
         "colab_type": "code",
         "colab": {}
       },
