--- a/3_6_classifying_newswires.ipynb
+++ b/3_6_classifying_newswires.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "3.6-classifying-newswires.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPv3Umqck6yziz00L/UWOr5",
+      "authorship_tag": "ABX9TyOY3SGuvoK3LZu+rxUVj57/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,6 +367,77 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "xwyQFg7EcEdA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "384f9c2e-b6bb-459f-d0e4-cfbb5f5565ce"
+      },
+      "source": [
+        "only_2test_label = np.array([3,3,1,2,3,1,1,0,0,4])\n",
+        "only_2test_label"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 3, 1, 2, 3, 1, 1, 0, 0, 4])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dh1s2XDIcTPX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 199
+        },
+        "outputId": "d95664aa-71b1-4baa-86b9-c641e0334953"
+      },
+      "source": [
+        "only_2test_vectorize_label = vectorize_sequences(only_2test_label, 5) # The number 5 here sets the dimension to 5 (from 0 to 4). Default is 10.000\n",
+        "only_2test_vectorize_label"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 1., 0.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 0., 1., 0.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [1., 0., 0., 0., 0.],\n",
+              "       [1., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5XQs7sm5TeEm",
         "colab_type": "code",
         "colab": {}
@@ -495,9 +566,120 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6oa17eRRqa9Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that there is a built-in way to do this in Keras, which you have already seen in action in our MNIST example:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Iq1cm5DOVuxx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# VERY IMPORTANT !!!! BUILT IN WAY TO HOT ENCODE !!!!!\n",
+        "# ----------------------------------------------------\n",
+        "from keras.utils.np_utils import to_categorical\n",
+        "\n",
+        "one_hot_train_labels = to_categorical(train_labels)\n",
+        "one_hot_test_labels = to_categorical(test_labels)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-U0eli-QqwPh",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Building our network"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "REYHetIZqyJj",
+        "colab_type": "text"
+      },
+      "source": [
+        "This topic classification problem looks very similar to our previous movie review classification problem: in both cases, we are trying to classify short snippets of text. There is however a new constraint here: the number of output classes has gone from 2 to 46, i.e. the dimensionality of the output space is much larger.\n",
+        "\n",
+        "In a stack of Dense layers like what we were using, each layer can only access information present in the output of the previous layer. If one layer drops some information relevant to the classification problem, this information can never be recovered by later layers: each layer can potentially become an \"information bottleneck\". In our previous example, we were using 16-dimensional intermediate layers, but a 16-dimensional space may be too limited to learn to separate 46 different classes: such small layers may act as information bottlenecks, permanently dropping relevant information.\n",
+        "\n",
+        "For this reason we will use larger layers. Let's go with 64 units:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0P66M7W9qgiO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import models\n",
+        "from keras import layers"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BLGWDWiGq9XE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = models.Sequential()\n",
+        "model.add(layers.Dense(64, activation='relu', input_shape=(10000,)))\n",
+        "model.add(layers.Dense(64, activation='relu'))\n",
+        "model.add(layers.Dense(46, activation='softmax'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AQZMhVtJrhgB",
+        "colab_type": "text"
+      },
+      "source": [
+        "There are two other things you should note about this architecture:\n",
+        "\n",
+        "\n",
+        "*   We are ending the network with a Dense layer of size 46. This means that for each input sample, our network will output a 46-dimensional vector. Each entry in this vector (each dimension) will encode a different output class.\n",
+        "*   The last layer uses a softmax activation. You have already seen this pattern in the MNIST example. It means that the network will output a probability distribution over the 46 different output classes, i.e. for every input sample, the network will produce a 46-dimensional output vector where output[i] is the probability that the sample belongs to class i. The 46 scores will sum to 1.\n",
+        "\n",
+        "The best loss function to use in this case is categorical_crossentropy. It measures the distance between two probability distributions: in our case, between the probability distribution output by our network, and the true distribution of the labels. By minimizing the distance between these two distributions, we train our network to output something as close as possible to the true labels."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5NsbckjgrDip",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "83yCXB3xr5w6",
         "colab_type": "code",
         "colab": {}
       },
