--- a/3_7_predicting_house_prices.ipynb
+++ b/3_7_predicting_house_prices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "3.7-predicting-house-prices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyjc/Qec0O8oN2JglAq1DA",
+      "authorship_tag": "ABX9TyMJQBBtJZ/SQNGCcWyu7ZfY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,11 +81,11 @@
       "metadata": {
         "id": "LmtUfQVLLiOZ",
         "colab_type": "code",
+        "outputId": "75ef183a-c74e-4149-b580-9f9d8dd29187",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "583137f2-a830-4d59-eae7-fdb187294c10"
+        }
       },
       "source": [
         "from keras.datasets import boston_housing"
@@ -106,11 +106,11 @@
       "metadata": {
         "id": "fvnZ5cBYL__A",
         "colab_type": "code",
+        "outputId": "eb8d837a-d78d-42d8-d4f1-bcc85ddc6902",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "667f97b8-b0d3-4e24-8dbc-c1af0d5a56c9"
+        }
       },
       "source": [
         "(train_data, train_targets), (test_data, test_targets) =  boston_housing.load_data()"
@@ -121,7 +121,7 @@
           "output_type": "stream",
           "text": [
             "Downloading data from https://s3.amazonaws.com/keras-datasets/boston_housing.npz\n",
-            "57344/57026 [==============================] - 0s 3us/step\n"
+            "57344/57026 [==============================] - 0s 2us/step\n"
           ],
           "name": "stdout"
         }
@@ -132,11 +132,11 @@
       "metadata": {
         "id": "rSitcjrkMAsa",
         "colab_type": "code",
+        "outputId": "ec7dc07c-841d-4e31-b113-6d1d309c99f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "fab457a0-00af-4d52-a6da-7ea98611e5bd"
+        }
       },
       "source": [
         "train_data.shape"
@@ -162,11 +162,11 @@
       "metadata": {
         "id": "_uQhCi2pMYSY",
         "colab_type": "code",
+        "outputId": "290ea9af-8178-49cc-f502-e0c368c385d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "f726f09f-66a7-4449-f88f-bbe08f09285f"
+        }
       },
       "source": [
         "test_data.shape"
@@ -231,11 +231,11 @@
       "metadata": {
         "id": "uAi1kWp6MZz-",
         "colab_type": "code",
+        "outputId": "008158de-e406-40db-f117-aaa037c19a6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 675
-        },
-        "outputId": "05433d43-0a47-4d34-a542-207b6fe8fad5"
+        }
       },
       "source": [
         "train_targets"
@@ -343,9 +343,73 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sVfWiatBRIWs",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Building our network\n",
+        "Because so few samples are available, we will be using a very small network with two hidden layers, each with 64 units. In general, the less training data you have, the worse overfitting will be, and using a small network is one way to mitigate overfitting."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Py4OjB7FNm2v",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def build_model():\n",
+        "    # Because we will need to instantiate\n",
+        "    # the same model multiple times,\n",
+        "    # we use a function to construct it.\n",
+        "    model = models.Sequential()\n",
+        "    model.add(layers.Dense(64, activation='relu', input_shape=(train_data.shape[1],)))\n",
+        "    model.add(layers.Dense(64, activation='relu'))\n",
+        "    model.add(layers.Dense(1))\n",
+        "    model.compile(optimizer='rmsprop', loss='mse', metrics=['mae'])\n",
+        "    return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fUz8deg1W24Q",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "Our network ends with a single unit, and no activation (i.e. it will be linear layer). This is a typical setup for scalar regression (i.e. regression where we are trying to predict a single continuous value). Applying an activation function would constrain the range that the output can take; for instance if we applied a sigmoid activation function to our last layer, the network could only learn to predict values between 0 and 1. Here, because the last layer is purely linear, the network is free to learn to predict values in any range.\n",
+        "\n",
+        "Note that we are compiling the network with the mse loss function -- Mean Squared Error, the square of the difference between the predictions and the targets, a widely used loss function for regression problems.\n",
+        "\n",
+        "We are also monitoring a new metric during training: mae. This stands for Mean Absolute Error. It is simply the absolute value of the difference between the predictions and the targets. For instance, a MAE of 0.5 on this problem would mean that our predictions are off by \\$500 on average"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MVc1mgL9W3xE",
+        "colab_type": "text"
+      },
+      "source": [
+        "Validating our approach using K-fold validation\n",
+        "\n",
+        "To evaluate our network while we keep adjusting its parameters (such as the number of epochs used for training), we could simply split the data into a training set and a validation set, as we were doing in our previous examples. However, because we have so few data points, the validation set would end up being very small (e.g. about 100 examples). A consequence is that our validation scores may change a lot depending on which data points we choose to use for validation and which we choose for training, i.e. the validation scores may have a high variance with regard to the validation split. This would prevent us from reliably evaluating our model.\n",
+        "\n",
+        "The best practice in such situations is to use K-fold cross-validation. It consists of splitting the available data into K partitions (typically K=4 or 5), then instantiating K identical models, and training each one on K-1 partitions while evaluating on the remaining partition. The validation score for the model used would then be the average of the K validation scores obtained.\n",
+        "\n",
+        "In terms of code, this is straightforward:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e65HZnn9XB_f",
         "colab_type": "code",
         "colab": {}
       },
